Partially dejakartize test cases